--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "workers-test-bot"
+name = "fat-pusty-btd6"
 main = "dist/worker.js"
 account_id = "88e970e7c66a206dc1d32ad757af81c5"
 workers_dev = true
