--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -10,8 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
+      - name: Retrieve date
+        run: echo ::set-env name=CURRENT_DATE::$(date '+%Y-%m-%d')
       - uses: actions/checkout@v3
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          command: publish --compatibility-date ${{ env.CURRENT_DATE }}
