--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/service-worker-mock": "^2.0.1",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
 		"@typescript-eslint/parser": "^4.16.1",
+		"discord-api-types": "^0.35.0",
 		"eslint": "^7.21.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-config-typescript": "^3.0.0",
