feat: display chosen boss mode

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
 		"extends": [
 			"typescript",
 			"prettier"
-		]
+		],
+		"rules": {
+			"@typescript-eslint/explicit-module-boundary-types": "off"
+		}
 	}
 }
