feat: does this even work

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"cloudflare-discord-bot": "github:ToasterSticks/cloudflare-discord-bot",
 		"common-tags": "^1.8.2",
+		"nksku": "^1.0.7",
 		"pako": "^2.0.4"
 	},
 	"devDependencies": {
