--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 			"prettier"
 		],
 		"rules": {
-			"@typescript-eslint/explicit-module-boundary-types": "off"
+			"@typescript-eslint/explicit-module-boundary-types": "off",
+			"@typescript-eslint/no-non-null-assertion": "off"
 		}
 	}
 }
