--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@types/jest": "^26.0.23",
 		"@types/pako": "^2.0.0",
 		"@types/service-worker-mock": "^2.0.1",
+		"@types/webpack-env": "^1.17.0",
 		"@typescript-eslint/eslint-plugin": "^4.16.1",
 		"@typescript-eslint/parser": "^4.16.1",
 		"discord-api-types": "^0.36.2",
@@ -41,7 +42,8 @@
 		"ts-loader": "^9.2.2",
 		"typescript": "^4.3.2",
 		"webpack": "^5.38.1",
-		"webpack-cli": "^4.7.0"
+		"webpack-cli": "^4.7.0",
+		"webpack-env": "^0.8.0"
 	},
 	"eslintConfig": {
 		"root": true,
