--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,4 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["config:base"],
-	"packageRules": [
-		{
-			"matchPackagePatterns": ["*"],
-			"automerge": true
-		}
-	]
+	"extends": ["config:base"]
 }
