--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,8 @@ account_id = "88e970e7c66a206dc1d32ad757af81c5"
 workers_dev = true
 
 kv_namespaces = [
-  { binding = "KV", id = "12a6d5b6242545168d5aa77786b93e3b" }
+  { binding = "CACHE", id = "4809dfc32cdc4b4ea006823125608a2f" },
+  { binding = "PROFILES", id = "12a6d5b6242545168d5aa77786b93e3b" }
 ]
 
 [build]
