--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
 		"rules": {
 			"@typescript-eslint/explicit-module-boundary-types": "off",
 			"@typescript-eslint/no-non-null-assertion": "off",
-			"@typescript-eslint/no-inferrable-types": "off"
+			"@typescript-eslint/no-inferrable-types": "off",
+			"@typescript-eslint/ban-ts-comment": "off"
 		}
 	}
 }
