--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"test": "jest --config jestconfig.json --verbose"
 	},
 	"dependencies": {
+		"@iarna/toml": "^2.2.5",
 		"assert": "^2.0.0",
 		"browserify-zlib": "^0.2.0",
 		"cloudflare-discord-bot": "github:ToasterSticks/cloudflare-discord-bot",
@@ -25,6 +26,7 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "3.14.1",
 		"@types/common-tags": "1.8.1",
+		"@types/iarna__toml": "^2.0.2",
 		"@types/jest": "28.1.6",
 		"@types/pako": "2.0.0",
 		"@types/service-worker-mock": "2.0.1",
