--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 	"scripts": {
 		"build": "webpack",
 		"format": "prettier --write  '*.{json,js}' 'src/**/*.{js,ts}' 'test/**/*.{js,ts}'",
-		"lint": "eslint --max-warnings=0 src && prettier --check '*.{json,js}' 'src/**/*.{js,ts}' 'test/**/*.{js,ts}'",
-		"test": "jest --config jestconfig.json --verbose"
+		"lint": "eslint --max-warnings=0 src && prettier --check '*.{json,js}' 'src/**/*.{js,ts}' 'test/**/*.{js,ts}'"
 	},
 	"dependencies": {
 		"@iarna/toml": "^2.2.5",
@@ -27,7 +26,6 @@
 		"@cloudflare/workers-types": "3.14.1",
 		"@types/common-tags": "1.8.1",
 		"@types/iarna__toml": "2.0.2",
-		"@types/jest": "28.1.6",
 		"@types/pako": "2.0.0",
 		"@types/service-worker-mock": "2.0.1",
 		"@types/webpack-env": "1.18.0",
@@ -37,10 +35,8 @@
 		"eslint": "7.32.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-config-typescript": "3.0.0",
-		"jest": "28.1.3",
 		"prettier": "2.7.1",
 		"service-worker-mock": "2.0.5",
-		"ts-jest": "28.0.8",
 		"ts-loader": "9.3.1",
 		"typescript": "4.7.4",
 		"webpack": "5.74.0",
