--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,7 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"esModuleInterop": true,
-		"types": [
-			"@cloudflare/workers-types",
-			"@types/service-worker-mock",
-			"webpack-env"
-		]
+		"types": ["@cloudflare/workers-types", "@types/service-worker-mock", "webpack-env"]
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist", "test"]
