--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
 			"@typescript-eslint/explicit-module-boundary-types": "off",
 			"@typescript-eslint/no-non-null-assertion": "off",
 			"@typescript-eslint/no-inferrable-types": "off",
-			"@typescript-eslint/ban-ts-comment": "off"
+			"@typescript-eslint/ban-ts-comment": "off",
+			"@typescript-eslint/no-explicit-any": "off"
 		}
 	}
 }
