--- a/package.json
+++ b/package.json
@@ -56,7 +56,11 @@
 			"@typescript-eslint/no-non-null-assertion": "off",
 			"@typescript-eslint/no-inferrable-types": "off",
 			"@typescript-eslint/ban-ts-comment": "off",
-			"@typescript-eslint/no-explicit-any": "off"
+			"@typescript-eslint/no-explicit-any": "off",
+			"one-var": [
+				"error",
+				"consecutive"
+			]
 		}
 	}
 }
